@@ -2,6 +2,7 @@ package uk.gov.hmcts.reform.pcqbackend.security;
 
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.security.Keys;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -14,7 +15,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
+import javax.crypto.SecretKey;
 
 
 @Slf4j
@@ -38,22 +39,19 @@ public class JwtTokenFilter extends OncePerRequestFilter {
             return;
         }
 
-        String token = header.replace(jwtConfiguration.getPrefix(), "");
+        String token = header.replace(jwtConfiguration.getPrefix(), "").strip();
         try {
+            SecretKey secretKey = Keys.hmacShaKeyFor(jwtConfiguration.getSecret().getBytes());
 
-            Claims claims = Jwts.parser()
-                .setSigningKey(jwtConfiguration.getSecret().getBytes())
-                .parseClaimsJws(token)
-                .getBody();
+            Claims claims = (Claims) Jwts.parser().verifyWith(secretKey).build().parse(token).getPayload();
 
             String partyId = claims.getSubject();
             if (partyId != null) {
                 @SuppressWarnings("unchecked")
                 List<String> authorities = (List<String>) claims.get("authorities");
                 UsernamePasswordAuthenticationToken authenticationToken = new UsernamePasswordAuthenticationToken(
-                    partyId, null, authorities.stream().map(SimpleGrantedAuthority::new)
-                    .collect(Collectors.toList())
-                );
+                    partyId, null, authorities.stream().map(SimpleGrantedAuthority::new).toList());
+
                 SecurityContextHolder.getContext().setAuthentication(authenticationToken);
             }
 
